[project]
name = "apachetomcatscanner"
version = "3.7.2"
description = ""
dynamic = ["scripts"]
readme  = "README.md"
requires-python = ">=3.6"
license = { text = "GPL2"}
authors = [
        { email = "podalirius@protonmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "sectools==1.4.4",
    "xlsxwriter==3.2.2",
    "urllib3==2.3.0",
    "requests==2.32.3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/p0dalirius/ApacheTomcatScanner"

[project.optional-dependencies]
build = ["build"]
twine = ["twine"]

[tool.setuptools.packages.find]
include = ["apachetomcatscanner*"]

[tool.setuptools.package-data]
"*" = ["*"]

